# BWGEngine

./: CMakeLists.txt
assets/shaders/: default.frag  default.vert
src/: application.cpp  application.hpp  camera.hpp  input.hpp  main.cpp  mesh.hpp  model.cpp  model.hpp  object.hpp  player.hpp  shader.cpp  shader.hpp  time.hpp  transform.hpp
src/utils/: assets.hpp  utils.cpp  utils.hpp  vector_utils.hpp
src/utils/OBJConverter/: objconverter.cpp  objconverter.hpp
